force-app/main/default/objects/Turn__c/fields/Pool__c.field-meta.xml
<CustomField>
    <fullName>Pool__c</fullName>
    <formula>Property_ID__r.Has_Pool__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pool</label>
    <type>Checkbox</type>
</CustomField>