force-app/main/default/objects/Turn__c/fields/Pool_Present__c.field-meta.xml
<CustomField>
    <fullName>Pool_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pool: Present</label>
    <type>Checkbox</type>
</CustomField>