force-app/main/default/objects/Turn__c/fields/Pre_Construction_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Construction_Date__c</fullName>
    <inlineHelpText>This field is used for Third Party Rehabs</inlineHelpText>
    <label>Pre-Construction Date</label>
    <type>Date</type>
</CustomField>