force-app/main/default/objects/Turn__c/fields/Projected_Turn_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Turn_Complete_Date__c</fullName>
    <label>Projected Turn Complete Date</label>
    <type>Date</type>
</CustomField>