force-app/main/default/objects/Turn__c/fields/Property_Acq_Source__c.field-meta.xml
<CustomField>
    <fullName>Property_Acq_Source__c</fullName>
    <formula>TEXT(Property_ID__r.Property_Acq_Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Acq Source</label>
    <type>Text</type>
</CustomField>