force-app/main/default/objects/Turn__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>Property_Street_Address__c + &quot;,&quot; + &quot; &quot; + Property_City__c + &quot;,&quot; + &quot; &quot; + Property_State__c + &quot; &quot; + Property_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>