force-app/main/default/objects/Turn__c/fields/Property_Notes__c.field-meta.xml
<CustomField>
    <fullName>Property_Notes__c</fullName>
    <label>Property Notes</label>
    <type>TextArea</type>
</CustomField>