force-app/main/default/objects/Turn__c/fields/Property_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Street_Address__c</fullName>
    <formula>Property_ID__r.Property_Street_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Street Address</label>
    <type>Text</type>
</CustomField>