force-app/main/default/objects/Turn__c/fields/Property_Sub_Market__c.field-meta.xml
<CustomField>
    <fullName>Property_Sub_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Sub Market</label>
    <referenceTo>Sub_Market__c</referenceTo>
    <relationshipLabel>Turns</relationshipLabel>
    <relationshipName>Turns</relationshipName>
    <type>Lookup</type>
</CustomField>