force-app/main/default/objects/Turn__c/fields/Punch_List_2__c.field-meta.xml
<CustomField>
    <fullName>Punch_List_2__c</fullName>
    <label>Punch List 2</label>
    <type>TextArea</type>
</CustomField>