force-app/main/default/objects/Turn__c/fields/Punch_List_2_Checked__c.field-meta.xml
<CustomField>
    <fullName>Punch_List_2_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Punch List 2 Checked</label>
    <type>Checkbox</type>
</CustomField>