force-app/main/default/objects/Turn__c/fields/Punch_List_2_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Punch_List_2_Issued_Date__c</fullName>
    <label>Punch List 2 Issued Date</label>
    <type>Date</type>
</CustomField>