force-app/main/default/objects/Turn__c/fields/Punch_List__c.field-meta.xml
<CustomField>
    <fullName>Punch_List__c</fullName>
    <label>Punch List</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>