force-app/main/default/objects/Turn__c/fields/Punch_List_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Punch_List_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Punch List Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Turns5</relationshipName>
    <type>Lookup</type>
</CustomField>