force-app/main/default/objects/Turn__c/fields/Punch_List_Notes__c.field-meta.xml
<CustomField>
    <fullName>Punch_List_Notes__c</fullName>
    <label>Punch List Notes</label>
    <type>TextArea</type>
</CustomField>