force-app/main/default/objects/Turn__c/fields/ReOpen_Crimson__c.field-meta.xml
<CustomField>
    <fullName>ReOpen_Crimson__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reopen Crimson</label>
    <type>Checkbox</type>
</CustomField>