force-app/main/default/objects/Turn__c/fields/Revised_Commitment_CO2__c.field-meta.xml
<CustomField>
    <fullName>Revised_Commitment_CO2__c</fullName>
    <label>Revised Commitment CO2</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>