force-app/main/default/objects/Turn__c/fields/Schedule_Notes__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Notes__c</fullName>
    <label>Schedule Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>