force-app/main/default/objects/Turn__c/fields/Send_to_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Marketing</label>
    <type>Checkbox</type>
</CustomField>