force-app/main/default/objects/Turn__c/fields/Septic_Maintenance_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Septic_Maintenance_Due_Date__c</fullName>
    <label>Septic Maintenance Due Date</label>
    <type>Date</type>
</CustomField>