force-app/main/default/objects/Turn__c/fields/Sewer__c.field-meta.xml
<CustomField>
    <fullName>Sewer__c</fullName>
    <label>Sewer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Septic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>