force-app/main/default/objects/Turn__c/fields/Sewer_Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sewer_Service_Notes__c</fullName>
    <label>Sewer Service: Notes</label>
    <type>TextArea</type>
</CustomField>