force-app/main/default/objects/Turn__c/fields/Sewer_Service_Septic__c.field-meta.xml
<CustomField>
    <fullName>Sewer_Service_Septic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sewer Service: Septic</label>
    <type>Checkbox</type>
</CustomField>