force-app/main/default/objects/Turn__c/fields/SRTM_Manager__c.field-meta.xml
<CustomField>
    <fullName>SRTM_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SRTM Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Turns1</relationshipName>
    <type>Lookup</type>
</CustomField>