force-app/main/default/objects/Turn__c/fields/Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Status_Notes__c</fullName>
    <label>Bid Status Notes</label>
    <length>131065</length>
    <type>LongTextArea</type>
</CustomField>