force-app/main/default/objects/Turn__c/fields/Sub_Market__c.field-meta.xml
<CustomField>
    <fullName>Sub_Market__c</fullName>
    <description>If( ISBLANK(Property_Sub_Market__c),Property_ID__r.Sub_Market__c, Property_Sub_Market__c)</description>
    <formula>If( ISBLANK(Property_Sub_Market__c),Property_ID__r.Sub_Market__c, Property_Sub_Market__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Market</label>
    <type>Text</type>
</CustomField>