force-app/main/default/objects/Turn__c/fields/Submit_for_Bid_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Bid_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit for Bid Approval</label>
    <type>Checkbox</type>
</CustomField>