force-app/main/default/objects/Turn__c/fields/Submitted_for_External_Review_CO_3__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_External_Review_CO_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted for External Review CO 3</label>
    <type>Checkbox</type>
</CustomField>