force-app/main/default/objects/Turn__c/fields/Target_Bid_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Bid_Due_Date__c</fullName>
    <formula>Turn_Bid_Request_Date__c + 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Bid Due Date</label>
    <type>Date</type>
</CustomField>