force-app/main/default/objects/Turn__c/fields/Target_Move_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Move_Out_Date__c</fullName>
    <formula>Property_ID__r.Move_Out_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Move Out Date</label>
    <type>Date</type>
</CustomField>