force-app/main/default/objects/Turn__c/fields/Target_Punchlist_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Punchlist_Complete_Date__c</fullName>
    <label>Target Punchlist Complete Date</label>
    <type>Date</type>
</CustomField>