force-app/main/default/objects/Turn__c/fields/Target_Turn_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Turn_Complete_Date__c</fullName>
    <formula>Turn_Work_Authorization_Issued_Date__c + CEILING((Turn_Recommendation_Contingency__c/850))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Turn Complete Date</label>
    <type>Date</type>
</CustomField>