force-app/main/default/objects/Turn__c/fields/Total_Actual_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Costs__c</fullName>
    <label>Total Actual Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>