force-app/main/default/objects/Turn__c/fields/Total_Approved_Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Total_Approved_Change_Order__c</fullName>
    <formula>IF(ISBLANK(Turn_Approved_Change_Order_Signed_Date__c), 0,  Turn_Approved_Change_Order_Amount__c) + 
IF(ISBLANK(Turn_Approved_Change_Order_2_Date__c), 0,  Turn_Approved_Change_Order_2_Amount__c) + 
IF(ISBLANK(Turn_Approved_Change_Order_3_Date__c), 0,  Turn_Approved_Change_Order_3_Amount__c) +
IF(ISBLANK(Warranty_Signed_Date__c), 0, Approved_Warranty_Change_Order_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Approved Change Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>