force-app/main/default/objects/Turn__c/fields/Total_Days_Since_Move_Out__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_Since_Move_Out__c</fullName>
    <formula>IF(Not(ISBLANK(Actual_Turn_Complete_Date__c)), Actual_Turn_Complete_Date__c - DATEVALUE(CreatedDate), Today() - IF(ISBLANK(Actual_Move_Out_Date__c),NULL,Actual_Move_Out_Date__c))</formula>
    <label>Total Days Since Move Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>