force-app/main/default/objects/Turn__c/fields/Total_Insurance_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Total_Insurance_Proceeds__c</fullName>
    <label>Total Insurance Proceeds</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>