force-app/main/default/objects/Turn__c/fields/Total_ROM_Claim__c.field-meta.xml
<CustomField>
    <fullName>Total_ROM_Claim__c</fullName>
    <label>Total ROM Claim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>