force-app/main/default/objects/Turn__c/fields/Total_Turn_Commitment_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Turn_Commitment_to_Date__c</fullName>
    <formula>Turn_Approved_Change_Order_Amount__c  +  Turn_Approved_Change_Order_2_Amount__c +  Turn_Approved_Change_Order_3_Amount__c + Approved_Warranty_Change_Order_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Turn Commitment to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>