force-app/main/default/objects/Turn__c/fields/Total_Turn_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Turn_Days__c</fullName>
    <formula>if(Not(Isnull(Actual_Turn_Complete_Date__c)), Actual_Turn_Complete_Date__c - Turn_Work_Authorization_Signed_Date__c , Projected_Turn_Complete_Date__c - Turn_Work_Authorization_Signed_Date__c)</formula>
    <label>Total Turn Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>