force-app/main/default/objects/Turn__c/fields/Transfer_to_REO_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_REO_Date__c</fullName>
    <label>Transfer to REO Date</label>
    <type>Date</type>
</CustomField>