force-app/main/default/objects/Turn__c/fields/Trash_Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Trash_Service_Notes__c</fullName>
    <label>Trash Service Notes</label>
    <type>TextArea</type>
</CustomField>