force-app/main/default/objects/Turn__c/fields/Trash_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Trash_Service_Provider__c</fullName>
    <label>Trash Service Provider</label>
    <type>TextArea</type>
</CustomField>