force-app/main/default/objects/Turn__c/fields/Turn_Approved_Change_Order_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Turn_Approved_Change_Order_2_Date__c</fullName>
    <label>Turn Approved Change Order #2 Date</label>
    <type>Date</type>
</CustomField>