force-app/main/default/objects/Turn__c/fields/Turn_Approved_Change_Order_3_Amount__c.field-meta.xml
<CustomField>
    <fullName>Turn_Approved_Change_Order_3_Amount__c</fullName>
    <label>Turn Approved Change Order #3 Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>