force-app/main/default/objects/Turn__c/fields/Turn_Bid_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Turn_Bid_Request_Date__c</fullName>
    <label>Turn Bid Assignment Date</label>
    <type>Date</type>
</CustomField>