force-app/main/default/objects/Turn__c/fields/Turn_Change_Order_2_Text__c.field-meta.xml
<CustomField>
    <fullName>Turn_Change_Order_2_Text__c</fullName>
    <formula>SUBSTITUTE(Turn_Change_Order_2_Form__c, &quot;https://hudsonhomesmgmt.quip.com/&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn Change Order 2 Text</label>
    <type>Text</type>
</CustomField>