force-app/main/default/objects/Turn__c/fields/Turn_Change_Order_Form__c.field-meta.xml
<CustomField>
    <fullName>Turn_Change_Order_Form__c</fullName>
    <label>Turn Change Order Form</label>
    <type>Url</type>
</CustomField>