force-app/main/default/objects/Turn__c/fields/Turn_Change_Order_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Turn_Change_Order_Issued_Date__c</fullName>
    <label>Turn Change Order Issued Date</label>
    <type>Date</type>
</CustomField>