force-app/main/default/objects/Turn__c/fields/Turn_Contingency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Turn_Contingency_Amount__c</fullName>
    <formula>Turn_Recommendation__c * Turn_Contingency_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn Contingency (Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>