force-app/main/default/objects/Turn__c/fields/Turn_Contingency_Percent__c.field-meta.xml
<CustomField>
    <fullName>Turn_Contingency_Percent__c</fullName>
    <defaultValue>10/100</defaultValue>
    <label>Turn Contingency Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>