force-app/main/default/objects/Turn__c/fields/Turn_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Turn_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Turn Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Turns4</relationshipName>
    <type>Lookup</type>
</CustomField>