force-app/main/default/objects/Turn__c/fields/Turn_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>Turn_Coordinator_Email__c</fullName>
    <formula>Turn_Coordinator__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn Coordinator Email</label>
    <type>Text</type>
</CustomField>