force-app/main/default/objects/Turn__c/fields/Turn_Coordinator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Turn_Coordinator_Phone__c</fullName>
    <formula>Turn_Coordinator__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn Coordinator Phone</label>
    <type>Text</type>
</CustomField>