force-app/main/default/objects/Turn__c/fields/Turn_Field_PM__c.field-meta.xml
<CustomField>
    <fullName>Turn_Field_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Turn Field PM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Turns</relationshipName>
    <type>Lookup</type>
</CustomField>