force-app/main/default/objects/Turn__c/fields/Turn_Field_PM_Email__c.field-meta.xml
<CustomField>
    <fullName>Turn_Field_PM_Email__c</fullName>
    <formula>Turn_Field_PM__r.Email</formula>
    <label>Turn Field PM Email</label>
    <type>Text</type>
</CustomField>