force-app/main/default/objects/Turn__c/fields/Turn_Field_PM_Phone__c.field-meta.xml
<CustomField>
    <fullName>Turn_Field_PM_Phone__c</fullName>
    <formula>Turn_Field_PM__r.Phone</formula>
    <label>Turn Field PM Phone</label>
    <type>Text</type>
</CustomField>