force-app/main/default/objects/Turn__c/fields/Turn_GC__c.field-meta.xml
<CustomField>
    <fullName>Turn_GC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Turn - GC</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 AND 2)</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>General Contractor</value>
        </filterItems>
        <filterItems>
            <field>Account.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Turns</relationshipLabel>
    <relationshipName>Turns</relationshipName>
    <type>Lookup</type>
</CustomField>