force-app/main/default/objects/Turn__c/fields/Turn_GC_Vendor_Form__c.field-meta.xml
<CustomField>
    <fullName>Turn_GC_Vendor_Form__c</fullName>
    <label>Turn GC Vendor Form</label>
    <type>Url</type>
</CustomField>