force-app/main/default/objects/Turn__c/fields/Turn_GC_Vendor_Text__c.field-meta.xml
<CustomField>
    <fullName>Turn_GC_Vendor_Text__c</fullName>
    <formula>SUBSTITUTE(Turn_GC_Vendor_Form__c, &quot;https://hudsonhomesmgmt.quip.com/&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn GC Vendor Text</label>
    <type>Text</type>
</CustomField>