force-app/main/default/objects/Turn__c/fields/Turn_Id_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Turn_Id_18_Digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn Id 18-Digit</label>
    <type>Text</type>
</CustomField>