force-app/main/default/objects/Turn__c/fields/Turn_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Turn_Manager_Email__c</fullName>
    <formula>Turn_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn Manager Email</label>
    <type>Text</type>
</CustomField>