force-app/main/default/objects/Turn__c/fields/Turn_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Turn_Manager_Phone__c</fullName>
    <formula>Turn_Manager__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn Manager Phone</label>
    <type>Text</type>
</CustomField>