force-app/main/default/objects/Turn__c/fields/Turn_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Turn_Recommendation__c</fullName>
    <label>Turn Recommendation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>