force-app/main/default/objects/Turn__c/fields/Turn_Recommendation_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Turn_Recommendation_Contingency__c</fullName>
    <formula>Turn_Recommendation__c * Turn_Contingency_Percent__c + Turn_Recommendation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn Recommendation + Contingency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>