force-app/main/default/objects/Turn__c/fields/Turn_Reviewer_Email__c.field-meta.xml
<CustomField>
    <fullName>Turn_Reviewer_Email__c</fullName>
    <formula>Turn_Reviewer__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn Reviewer Email</label>
    <type>Text</type>
</CustomField>