force-app/main/default/objects/Turn__c/fields/Turn_Reviewer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Turn_Reviewer_Phone__c</fullName>
    <formula>Turn_Reviewer__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn Reviewer Phone</label>
    <type>Text</type>
</CustomField>