force-app/main/default/objects/Turn__c/fields/Turn_Stage__c.field-meta.xml
<CustomField>
    <fullName>Turn_Stage__c</fullName>
    <label>Turn Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordered</fullName>
                <default>true</default>
                <label>Ordered</label>
            </value>
            <value>
                <fullName>Turn GC Assigned</fullName>
            </value>
            <value>
                <fullName>Turn Reviewer Assigned</fullName>
            </value>
            <value>
                <fullName>Turn Bid Complete</fullName>
            </value>
            <value>
                <fullName>Turn Bid Approved</fullName>
            </value>
            <value>
                <fullName>Turn WAF Created</fullName>
            </value>
            <value>
                <fullName>Turn In Progress</fullName>
            </value>
            <value>
                <fullName>Turn Complete</fullName>
            </value>
            <value>
                <fullName>Pending Cancel</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Marketing Team Notified</fullName>
                <isActive>false</isActive>
                <label>Marketing Team Notified</label>
            </value>
            <value>
                <fullName>Pending Move Out</fullName>
                <isActive>false</isActive>
                <label>Pending Move Out</label>
            </value>
            <value>
                <fullName>QA Check In-Progress</fullName>
                <isActive>false</isActive>
                <label>QA Check In-Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>