force-app/main/default/objects/Turn__c/fields/Turn_Stage_Before_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Turn_Stage_Before_Cancel__c</fullName>
    <label>Turn Stage Before Cancel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>