force-app/main/default/objects/Turn__c/fields/Turn_Type__c.field-meta.xml
<CustomField>
    <fullName>Turn_Type__c</fullName>
    <label>Turn Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turn</fullName>
            </value>
            <value>
                <fullName>Disposition Turn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>