force-app/main/default/objects/Turn__c/fields/Turn_Work_Authorization_Amount__c.field-meta.xml
<CustomField>
    <fullName>Turn_Work_Authorization_Amount__c</fullName>
    <formula>Turn_Recommendation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turn Work Authorization Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>